--- a/style.css
+++ b/style.css
@@ -1,50 +1,119 @@
-body{
-    background-color: lightgray;
-}
 .page-header{
-
     margin-top: 0px;
     background-color: white;
+    height: 100px;
 }
 
-.main-content{
-
-    background-color: white;
+.navbar {
+    margin-bottom: 0;
+    border-radius: 0;
 }
 
-h1{
-    padding-left: 25px;   
-}
+.nav li {
+display: inline;
+padding: 10px;
+}      
 
-h1 span a, h1 span a:hover{
-    padding:20px;
-    font-family: "Times New Roman", Times, serif;
+/*Latitude Formating*/
+h1 span{ 
     font-size: 40px;
     font-weight: bold;
+    font-family: "Times New Roman", Times, serif;
+    padding: 20px;
     color:white;
     background-color : LightSeaGreen;
     text-decoration-line: none;
 }
 
-/* .row {
-    
-    border: 50px solid lightgray;
-} */
-
-
-.navbar {
-        margin-bottom: 0;
-        border-radius: 0;
-    }
+/*To change the color only on hover*/
+h1 span a, h1 span a:hover{    
+    color:white;
+    text-decoration-line: none;
+}
 
 h1{
-    padding:20px;
-    font-family: "Times New Roman", Times, serif;
     font-size: 40px;
     font-weight: bold;
-    color:LightSeaGreen;;
-}   
+    font-family: "Times New Roman", Times, serif;
+    padding: 15px;
+    color: lightseagreen;
+}
 
+/*Background colors*/
+body{
+    background-color: lightgray;
+}
+
+.background-color{
+    background-color: white;
+}
+
+.maintext{
+    line-height: 1.6;
+    font-family: "Georgia", serif;
+}
+
+/* Resizing the images*/
+.resizemain{
+    height: 350px; 
+    width:  350px;    
+}
+
+.resize {
+    height: 140px; 
+    width:  140px; 
+    /*object-fit: contain;*/
+}
+
+.repose{
+    margin-left:10px;
+}
+
+.white-space-right{
+    margin-right:10px!important; 
+    width:60%; 
+    max-height:5000px!important;
+}
+.white-space-left{
+    margin-left:9px!important; 
+}
+
+.side-height{
+    height: 70%;
+    margin-bottom: auto;
+}
+img {
+    display: block;
+    margin-left: 20px;
+    margin-right: auto;
+    margin-bottom: 20px;
+    /* width: 40%; */
+}
+/* Create two equal columns that sits next to each other */
+.column {
+    flex: 50%;
+    padding: 0 4px;
+}
+    
+.column img {
+margin-top: 8px;
+vertical-align: middle;
+}
+
+.comp-image{
+    margin-left:60px;
+    width:400px;
+    height:400px;
+   /* object-fit: contain; */
+}
+
+.sub-head{
+    font-size: 25px;
+    font-weight: bold;
+    font-family: "Georgia", serif;
+    padding: 15px;
+    color: lightseagreen;
+}
 .square {
     width: 100%;
     height: 0;
@@ -55,48 +124,16 @@ h1{
     display: flex;
     flex-wrap: wrap;
     padding: 0 4px;
-  }
-  
-  /* Create two equal columns that sits next to each other */
-  .column {
-    flex: 50%;
-    padding: 0 4px;
-  }
-  
-  .column img {
-    margin-top: 8px;
-    vertical-align: middle;
-  }
-.nav li {
-    display: inline;
-    padding: 10px;
-    }   
+  } 
     
 footer{
     padding-top: 10px;
     padding-bottom: 10px;
+    margin-top:20px;
     color:white;
     background: dimgray;
     border-top: 5px solid lightseagreen;
 }    
 
-.resize {
-    height: 140px; 
-    width:  140px; 
-    object-fit: contain;
-}
-
-.resizemain{
-    height: 200px; 
-    width:  200px; 
-    
-}
-
-.maintext{
-    line-height: 1.6;
-}
-
-.bg-col{
-    background-color: white;
-}
+tr:nth-child(even) {background-color: #f2f2f2;}
 
